--- a/Tex/experiment.tex
+++ b/Tex/experiment.tex
@@ -302,7 +302,7 @@ In a small-angle approximation, the reconstruction is the magnitude squared of t
 	could be used instead.} with width $w$ is proportional to $\sinc^2{\left(\frac{q w}{2}\right)}$, a 2D least-squares regression of the product of those functions is performed on the reconstructed image to estimate the focal FWHM \cite{butz2015}. As the horizontal direction is under-sampled, the horizontal profile will not be resolved in the reconstruction.  The function used for the regression is sampled at 25x the resolution in both directions and averaged. This corresponds to a convolution with a rectangular sampling kernel and reduces the effect of undersampling on the values determined by the regression. Furthermore, a rotation parameter is introduced to account for a slight misalignment of the detector.
 
 For a 5\,\textmu m Copper foil placed at three different positions, at the nominal focus and two positions further upstream, results of the auto-correlation reconstruction are shown in \fref{fig:Cu5umreco2d}.
-The regression estimates of the focal width in the vertical direction at a nominal focus as (240$\pm$20)\,nm and while defocused by 250\,\textmu m as (380$\pm$40)\, nm. The stated errors only include regression uncertainty. In \fref{fig:fereco2d} the results for 10\,\textmu m and 500\,nm iron foils as well as an example of the result of the regression is shown. As the 5\,\textmu m and 10\,\textmu m foils suffer from severe undersampling along the horizontal direction, only for the 500\,nm iron foil (\fref{fig:fe500nmreco2d}) the regression of the width in this axis can be performed. The regression estimates the width of the emitting volume in focal position as (500$\pm$250)\,nm in the horizontal direction, agreeing with the expected value of (500*$\sqrt{2}$\,nm.
+The regression estimates of the focal width in the vertical direction at the nominal focus position along the beam as (240$\pm$20)\,nm and while defocused by 250\,\textmu m as (380$\pm$40)\, nm. The stated errors only include regression uncertainty. The determined width at the focal position is in good agreement with the width determined by the wirescan, (210$\pm$ 10)\,nm. In \fref{fig:fereco2d} the results for 10\,\textmu m and 500\,nm iron foils as well as an example of the result of the regression is shown. As the 5\,\textmu m and 10\,\textmu m foils suffer from severe undersampling along the horizontal direction, only for the 500\,nm iron foil (\fref{fig:fe500nmreco2d}) the regression of the width in this axis can be performed. The regression estimates the width of the emitting volume in focal position as (500$\pm$250)\,nm in the horizontal direction, agreeing with the expected value of (500$\cdot\sqrt{2})$\,nm.
 
 Nevertheless, for all three foils in focal position the signal amplitude can be extrapolated by the regression as 0.004$\pm$0.001 with no significant difference between the samples.
 The noise levels as estimated by the standard deviation over pixels outside the feature containing region of interest are  0.00013 for the copper foil, 0.0002 for the iron 10\,\textmu m foil, and 0.002 for the iron 500\,nm foil. The mean over the regions of interest of standard errors of the mean over the different shots used in the reconstruction are equal to these as well.
