--- a/Tex/discussion.tex
+++ b/Tex/discussion.tex
@@ -1,6 +1,6 @@
 \section{Discussion}
 The estimated number of overlaid modes from the foil spectra is lower than expected. However, one must keep in mind that the used regression scheme has a low sensitivity for higher $M$ values due to the diminishing gradient and might underestimate the number of modes. Nevertheless, this indicates that the number of modes is much higher than the \enquote{optimal} value for unpolarized light ($M=2$), resulting in severely reduced contrast. 
-As the measurement was performed perpendicular the the FEL beam coherent scattering was many orders of magnitude weaker than the fluorescence.  Therefore, in contrast to previous experiments, any observed intensity correlations can only stem from the incoherent fluorescence.
+As the measurement was performed perpendicular to the FEL beam, coherent scattering was many orders of magnitude weaker than the fluorescence.  Therefore, in contrast to previous experiments, any observed intensity correlations can only stem from the incoherent fluorescence.
 The disappearance of the observed correlations after defocusing strongly suggests that they actually include spatial information about the sample and are not caused by detector artifacts. This could be further examined in future experiments by simply rotating the detector and observing if the reconstruction rotates as well. The amplitude observed in the foil samples matches approximately the result of the simulation presented in \fref{chap:simulation}  (\fref{fig:simfoil}) after accounting for polarization and multiple emission lines but is a factor of 2-4 less than previously measured by Inoue et al. and suggests more than 200 modes \cite{inoue2019}. At its root, there might be various causes for this: 1) a longer pulse length as a result of the less strict filtering of the shots (a different trade-off chosen with regards to peak contrast vs. noise reduction by averaging over more images), 2) the only partially by the regression corrected undersampling and 3) the higher observation angle creating additional spatial modes. For an accurate measurement of the focal width in horizontal and vertical direction, the experiment would have had to be conducted in a small angle regime with the foil placed perpendicular to the beam and the detector placed close to forward direction. 
 
 The nanoparticle samples have much less prominent features according to the SAXS measurements than initially planned and compared to the structure factor for non-interacting spheres, leading to an overestimated SNR in the simulations. The SAXS measurements give a reasonably good insight into the expected results of the IDI measurement of the same sample. However, there will be some differences in the reconstructed structure factor due to the iron specificity of IDI and the smaller focal volume capturing fewer aggregates. Mechanical limitations in the experimental setup made is necessary to perform the experiment with the excitation beam under a 45° angle. The path length differences due to this angle and the relatively high thickness of the samples created a large number spatio-temporal modes reducing the contrast. At the time of sample simulations, design, and preparation, this experimental limitation was not yet known and therefore not considered.
