--- a/Tex/main.tex
+++ b/Tex/main.tex
@@ -314,7 +314,7 @@
 	\acro{FFT}{Fast Fourier transform}
 	\acro{SLAC}{SLAC National Accelerator Laboratory}
 	\acro{LCLS}{Linac Coherent Light Source}
-	\acro{SACLA}{SPring-8 Angstrom Compact free electron Laser}
+	\acro{SACLA}{SPring-8 Angstrom Compact free-electron Laser}
 	\acro{SSRL}{Stanford Synchrotron Radiation Lightsource}
 \end{acronym}
 
