--- a/Tex/conclusion.tex
+++ b/Tex/conclusion.tex
@@ -1,16 +1,18 @@
-		\chapter{Conclusion and Outlook}
-	There is still an ongoing discussion about the feasibility, optimal sample, and beam requirements of a proof-of-principle experiment of IDI at the nanoscale and about in which areas IDI can provide advantages over established methods. 
-	By performing a focal width measurement with IDI perpendicular to the FEL beam, in contrast to previous experiments, it was shown that the observed intensity correlations indeed stem from the fluorescence and not from coherent scattering.
+\chapter{Conclusion and Outlook}
+There is still an ongoing discussion about the feasibility, optimal sample, and beam requirements of a proof-of-principle experiment of IDI at the nanoscale and about in which areas IDI can provide advantages over established methods. The present work contributes both simulations to validate theoretical considerations, as well as experimental results.
 
-\paragraph{Developed tools for CDI/IDI experiments}
+\paragraph{Developed tools for IDI Experiments}
 Both the GPU-accelerated simulation code and the reconstruction code developed for this thesis are open source\footnote{available under \url{https;//github.com/fzimmermann89/idi}}, and will be used for planning and analyzing future IDI experiments. The simulation code allows comparison of IDI and CDI experiments for the same sample, as well as comparison of different samples and experimental parameters, as shown in \fref{chap:simulation}.
 The analysis code implements 2D, 3D, and radial correlations for small and wide-angle experiments with different normalization approaches. Furthermore, it contains a library of commonly needed auxiliary functions, such as dark and mask generation for pixel detectors, a new common-mode correction with adaptive block sizes, photon counting procedures, different regression tools, and tools for center finding similar tasks.
-Additionally, the Kossel line alignment tool with its graphical user interface allows easy analysis of the detector orientation for future experiments with strict alignment margins.
+Additionally, the developed Kossel line alignment tool with easy analysis of the detector orientation for future experiments with strict alignment margins.
+
+\paragraph{Experimental Results}
+The focal width in vertical direction was successfully measured by IDI. The messurement was validated by, first, observing that the measured width increases as the sample is moved out of focus and, second, an independent wire scan measurement. Thus, the previously published results could be reproduced \cite{nakumura2020}. By detecting the fluorescence perpendicular to the FEL beam, in contrast to previous experiments, it was shown that the observed intensity correlations indeed stem from the fluorescence and not from coherent scattering. 
+The experiments using nanoparticle and crystal samples have been inconclusive so far. Thus, the proof of high-resolution imaging using IDI is still outstanding, and further refinements in the experimental design are necessary.
+
 
 \paragraph{Experimental Improvements}
-While previously published results for the foil samples could be reproduced, the experiments using nanoparticle and crystal samples have been inconclusive so far. Thus, the proof of high-resolution imaging using IDI is still outstanding, and further refinements in the experimental design are necessary.
-
-Recently, we performed an experiment using sub-1\,fs pulses at the CXI beamline at the LCLS free electron laser. In this experiment, three major improvements over the SACLA experiment were implemented: First, the shorter pulse length reduces the number of temporal modes, and a shot-by-shot high-resolution spectrometer allows for better filtering of the X-ray pulses by estimated pulse length and intensity. Second, the data was recorded in forward direction, solving the undersampling issue and reducing the Spatio-temporal modes in the small-angle regime. Finally, two new signal optimized samples were chosen. Anodic aluminum oxide (AAO) membranes with regular spaced 20\,nm or 30\,nm wide pores were filled with Nickel or Vanadium using atomic layer deposition, creating an array of hexagonal placed 500\,nm long cylinders 60\,nm/100\,nm apart \cite{carina2019}. As the range of the order of the self-organizing pores is smaller than the total area used in the experiment, the simulated reconstruction shows rings (\fref{fig:outlook_aao}).  The other samples were lithographically produced nanogratings with two different pitches, 60\,nm  and 80\,nm \cite{mojarad2015}. For these samples, a simulation is shown in \fref{fig:outlook_grating}. Both types of samples combine the advantages of a single crystal sample (namely intense features) while providing more signal and requiring less accessible reciprocal space. 
+Recently, we performed an experiment using sub-1\,fs pulses at the CXI beamline at the LCLS free-electron laser. In this experiment, three major improvements over the SACLA experiment were implemented: First, the shorter pulse length reduces the number of temporal modes, and a shot-by-shot high-resolution spectrometer allows for better filtering of the X-ray pulses by estimated pulse length and intensity. Second, the data was recorded in forward direction, solving the undersampling issue and reducing the Spatio-temporal modes in the small-angle regime. Finally, two new signal optimized samples were chosen. Anodic aluminum oxide (AAO) membranes with regular spaced 20\,nm or 30\,nm wide pores were filled with Nickel or Vanadium using atomic layer deposition, creating an array of hexagonal placed 500\,nm long cylinders 60\,nm/100\,nm apart \cite{carina2019}. As the range of the order of the self-organizing pores is smaller than the total area used in the experiment, the simulated reconstruction shows rings (\fref{fig:outlook_aao}).  The other samples were lithographically produced nanogratings with two different pitches, 60\,nm  and 80\,nm \cite{mojarad2015}. For these samples, a simulation is shown in \fref{fig:outlook_grating}. Both types of samples combine the advantages of a single crystal sample (namely intense features) while providing more signal and requiring less accessible reciprocal space. 
 Based on the simulations, it can be estimated that a few hundred images taken with sub-fs pulses exciting 20\% of the atoms would suffice to reach an SNR of $>$5.
 We were able to record complete datasets on multiple samples. The data analysis of this experiment has not yet been completed and might result in the first experimental proof of using fluorescence intensity correlation for structural imaging at the nanoscale.  
 
@@ -27,8 +29,8 @@ We were able to record complete datasets on multiple samples. The data analysis 
 		\caption{AAO membrane  }
 		\label{fig:outlook_aao}
 	\end{subfigure}
-	\caption[Simulations in preparation of LCLS experiment]{Examples of simulations performed with the tools developed in this thesis in preparation of the LCLS free electron laser experiment LV65, which will use nano-gratings and AAO membranes with metal-filled self-organized pores as samples for an IDI measurement. The simulations were used to choose an optimized sample geometry and to estimate the expected SNR. The images shown are the calculated fluorescence intensity correlations between pixels of a quarter of an Jungfrau 4M detector, placed at a distance of 70\,cm (grating) and 1\,m (membrane), respectively. The simulated grating has a pitch of 80\,nm, 40\,nm line width and 40\,nm thickness.The AAO membrane has an inter pore distance 105\,nm and the pores are filled with vanadium.
-		Excitation of 20\% of the atoms and 4 modes was simulated. For both samples, an average over 100 images is shown.}
+	\caption[Simulations in preparation of LCLS experiment]{Examples of simulations performed with the tools developed in this thesis in preparation of the LCLS free-electron laser experiment LV65, which will use nano-gratings and AAO membranes with metal-filled self-organized pores as samples for an IDI measurement. The simulations were used to choose an optimized sample geometry and to estimate the expected SNR. The images shown are the calculated fluorescence intensity correlations between pixels of a quarter of an Jungfrau 4M detector, placed at a distance of 70\,cm (grating) and 1\,m (membrane), respectively. The simulated grating has a pitch of 80\,nm, 40\,nm line width and 40\,nm thickness.The AAO membrane has an inter pore distance 105\,nm and the pores are filled with vanadium.
+		Excitation of 20\% of the atoms and 4 modes was simulated. For both samples, an average of 100 images is shown.}
 \end{figure}
 
 
@@ -45,9 +47,9 @@ Extending the results obtained for both determining the focal volume, as well as
 \end{figure}
 
 \paragraph{Higher Order Correlations}
-Extending the Hanbury Brown and Twiss experiment to higher-order correlations allows the usage of prior knowledge about the distribution of the spatial frequencies in the sample. This provides an effective filter by fixing some terms in the correlation function at certain positions termed \textit{Magic Positions} \cite{schneider2018,thiel2007}. A future application of this scheme, in the analysis of the already recorded fluorescence patterns, might lead to a significant increase in the SNR.
+Extending the Hanbury Brown and Twiss experiment to higher-order correlations allows the usage of prior knowledge about the distribution of the spatial frequencies in the sample. This provides an effective filter by fixing some terms in the correlation function at certain positions termed \textit{Magic Positions} \cite{schneider2018,thiel2007}. A future application of this scheme in analyzing the already recorded fluorescence patterns might lead to a significant increase in the SNR.
 
 \vspace{0.5cm}
-Overall, the methods presented in this work have the potential for pushing the experimental implementation of IDI forward. Before considering the method as non-suitable for high resolution imaging, the results of experiments implementing the improvements described above should be awaited.
+Overall, the results presented in this work have already led to improvements in the experimental design. Furthermore, there are possibilities for further improvements in the data analysis. IDI can already be used for diagnostics during FEL experiments. Before considering the method as non-suitable for high-resolution imaging, the results of experiments implementing these improvements should be awaited.
 
 
